fix navbar out of boundry

--- a/components/layout/HeaderNew.module.scss
+++ b/components/layout/HeaderNew.module.scss
@@ -159,6 +159,12 @@
   font-size: 1.2rem;
 }
 
+.nav_toggle ul {
+  li + li {
+    border-top: 1px solid #dbdbdb;
+  }
+}
+
 .nav_toggle ul li a {
   display: inline-block;
   /* background-color: rebeccapurple; */
@@ -213,7 +219,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    gap: 2vw;
+    // gap: 2vw;
     list-style: none;
     padding: 0;
   }
@@ -223,6 +229,14 @@
     width: 13vw;
     margin: 0;
     padding: 0;
+    // border-left: 1px solid #111;
+  }
+
+  .nav_toggle ul {
+    li + li {
+      border-left: 1px solid #dbdbdb;
+      border-top: none;
+    }
   }
 
   .is_not_drop {
